feat(security): implement spring security with jwt token and role permissions on all endpoints