@@ -4,19 +4,19 @@ import br.com.fiap.voltly.domain.dto.ConsumptionLimitCreateDto;
 import br.com.fiap.voltly.domain.dto.ConsumptionLimitDto;
 import br.com.fiap.voltly.domain.model.ConsumptionLimit;
 import br.com.fiap.voltly.service.ConsumptionLimitService;
-import br.com.fiap.voltly.utils.DTOMapper;
-import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
 import org.springframework.format.annotation.DateTimeFormat;
 import org.springframework.http.ResponseEntity;
+import org.springframework.security.access.prepost.PreAuthorize;
+import org.springframework.security.core.annotation.AuthenticationPrincipal;
 import org.springframework.web.bind.annotation.*;
 
+import jakarta.validation.Valid;
 import java.net.URI;
 import java.time.YearMonth;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/limits")
@@ -25,8 +25,11 @@ public class ConsumptionLimitController {
 
     private final ConsumptionLimitService service;
 
+    // ADMIN
+
     @PostMapping
-    public ResponseEntity<ConsumptionLimitDto> create(@Valid @RequestBody ConsumptionLimitCreateDto dto) {
+    @PreAuthorize("hasRole('ADMIN')")
+    public ResponseEntity<ConsumptionLimitDto> createLimit(@Valid @RequestBody ConsumptionLimitCreateDto dto) {
         var saved = service.save(dto.toModel());
         return ResponseEntity
                 .created(URI.create("/api/limits/" + saved.getId()))
@@ -34,48 +37,71 @@ public class ConsumptionLimitController {
     }
 
     @GetMapping
-    public ResponseEntity<Page<ConsumptionLimitDto>> list(Pageable pageable) {
+    @PreAuthorize("hasRole('ADMIN')")
+    public ResponseEntity<Page<ConsumptionLimitDto>> listAllPageable(Pageable pageable) {
         return ResponseEntity.ok(
-                DTOMapper.mapPage(service.findAll(pageable), ConsumptionLimitDto::from));
+                service.findAll(pageable).map(ConsumptionLimitDto::from));
     }
 
     @GetMapping("/{id}")
-    public ResponseEntity<ConsumptionLimitDto> get(@PathVariable Long id) {
-        return ResponseEntity.ok(ConsumptionLimitDto.from(service.findById(id)));
-    }
-
-    @GetMapping("/equipment/{equipmentId}")
-    public ResponseEntity<ConsumptionLimitDto> byEquipment(@PathVariable Long equipmentId) {
-        return ResponseEntity.ok(ConsumptionLimitDto.from(service.findByEquipment(equipmentId)));
+    @PreAuthorize("hasRole('ADMIN')")
+    public ResponseEntity<ConsumptionLimitDto> getById(@PathVariable Long id) {
+        return ResponseEntity.ok(
+                ConsumptionLimitDto.from(service.findById(id)));
     }
 
     @PutMapping("/{id}")
-    public ResponseEntity<ConsumptionLimitDto> update(
+    @PreAuthorize("hasRole('ADMIN')")
+    public ResponseEntity<ConsumptionLimitDto> updateById(
             @PathVariable Long id,
             @Valid @RequestBody ConsumptionLimit limit
     ) {
-        return ResponseEntity.ok(ConsumptionLimitDto.from(service.update(id, limit)));
+        return ResponseEntity.ok(
+                ConsumptionLimitDto.from(service.update(id, limit)));
+    }
+
+    @DeleteMapping("/{id}")
+    @PreAuthorize("hasRole('ADMIN')")
+    public ResponseEntity<Void> deleteById(@PathVariable Long id) {
+        service.delete(id);
+        return ResponseEntity.noContent().build();
     }
 
     @PostMapping("/monthly-recalculation")
+    @PreAuthorize("hasRole('ADMIN')")
     public ResponseEntity<List<ConsumptionLimitDto>> recalculateMonthly(
             @RequestParam(value = "yearMonth", required = false)
             @DateTimeFormat(pattern = "yyyy-MM") YearMonth yearMonth
     ) {
         var limits = service.recalculateMonthlyLimits(yearMonth);
-        var dtos   = limits.stream()
-                .map(ConsumptionLimitDto::from)
-                .collect(Collectors.toList());
-
+        var dtos   = limits.stream().map(ConsumptionLimitDto::from).toList();
         YearMonth ym = (yearMonth != null ? yearMonth : YearMonth.now().minusMonths(1));
         URI uri = URI.create("/api/limits/monthly-recalculation?yearMonth=" + ym);
-
         return ResponseEntity.created(uri).body(dtos);
     }
 
-    @DeleteMapping("/{id}")
-    public ResponseEntity<Void> delete(@PathVariable Long id) {
-        service.delete(id);
-        return ResponseEntity.noContent().build();
+    // SHARED / OWNER
+
+    @GetMapping("/equipment/{equipmentId}")
+    @PreAuthorize("hasRole('ADMIN') or @equipmentService.isOwner(#equipmentId, principal)")
+    public ResponseEntity<ConsumptionLimitDto> getByEquipment(
+            @PathVariable Long equipmentId) {
+
+        return ResponseEntity.ok(
+                ConsumptionLimitDto.from(service.findByEquipment(equipmentId)));
     }
+
+    // USER
+
+    @GetMapping("/me")
+    @PreAuthorize("hasRole('USER')")
+    public ResponseEntity<List<ConsumptionLimitDto>> myLimits(
+            @AuthenticationPrincipal br.com.fiap.voltly.domain.model.User principal) {
+        var dtos = service.findAllByOwner(principal.getId())
+                .stream()
+                .map(ConsumptionLimitDto::from)
+                .toList();
+        return ResponseEntity.ok(dtos);
+    }
+
 }
